css/frm_admin.css
/* ... */
#new_fields,
.frm-has-modal,
p.frm_has_shortcodes {
	position: relative;
}

.frm-inline-modal.postbox {
	background: #fff;
}

.frm_has_shortcodes .frmsvg,
.frm_has_shortcodes i:not([class*=mce-]) {
	position: absolute;
	color: var(--primary-500);
	border-radius: 50%;
	border: 1px solid transparent;
	z-index: 100;
	text-align: center;
}

.frm_has_shortcodes input,
.frm_has_shortcodes textarea {
	padding-left: 18px;
	box-sizing: border-box;
}

#form_settings_page #frm_adv_info, #frm_builder_page #frm_adv_info {
	display: none;
	top: 0;
	width: 310px;
	max-height: 315px;
	min-height: 200px;
	overflow-y: scroll;
	z-index: 100;
}

#form_global_settings .columns-2 .frm-right-panel,
#form_settings_page .columns-2 .frm-right-panel,
#frm-form-templates-page .frm-right-panel {
	flex: 0 0 var(--small-sidebar);
	width: var(--small-sidebar);
	min-width: var(--small-sidebar);
}

#form_global_settings .frm_grid_container {
	gap: 0 var(--gap-md);
}

.frm-inner-content {
	padding: var(--gap-md);
}

.post-type-frm_display #poststuff {
	padding: 0 0 10px 40px;
}

#postbox-container-2 .postbox .inside {
	padding: 15px 25px;
}

#postbox-container-2 #frm_advanced .inside h3 {
	margin: 15px -25px;
	font-weight: 600;
}

#form_settings_page .frm-inner-content {
	padding-top: 0;
	padding-bottom: 150px;
	position: relative;
}

.frm_wrap #submitdiv {
	margin-bottom: 0;
	border-width: 0 0 1px;
	width: 100%;
	min-width: unset;
}

.frm_wrap #frm_adv_info .handlediv,
.frm_wrap #frm_adv_info .hndle {
	display: none;
}

.frm_wrap .menu-settings {
	/* for add-on reverse compatibility */
	border: none;
	margin-top: 0;
}

.nodrag a {
	cursor: pointer;
}

.frm_wrap #frm_adv_info .inside {
	margin: 0;
}

#frm_adv_info > .inside {
	padding: 0;
}

.frm-right-panel .frm-inline-modal.postbox .inside {
	margin: 0;
	padding-top: 0;
}

.frm-right-panel .frm-inline-modal .inside p:not(.howto),
.frm-right-panel .frm-inline-modal .inside a {
	font-size: 15px;
}

.frm-inline-modal .inside a.frm_icon_font {
	font-size: 18px;
}

.frm-right-panel .frm_field_list #frm-insert-fields {
	max-height: none;
	font-size: var(--text-sm);
	padding: 0;
}

.frm-nav-tabs {
	margin: 10px 0 20px;
	padding: 0 var(--gap-sm);
	display: block;
	border-bottom: 1px solid var(--grey-300);
}

#frm-nav-tabs {
	position: -webkit-sticky;
	position: sticky;
	top: 0;
	background-color: var(--sidebar-color);
	z-index: 98; /* must be < 99 */
	margin-top: 0;
	padding-top: 5px;
}

.frm_form_settings #frm_adv_info #frm-nav-tabs {
	background-color: #fff;
	margin: 0 -4px;
}

.frm_form_settings span.frm-with-right-icon, #frm_builder_page span.frm-with-right-icon {
	display: block;
}

.frm-inline-modal .frm-nav-tabs,
#frm_adv_info .frm-nav-tabs {
	margin: 5px 0 0;
}

#frm_adv_info .frm-nav-tabs.frm-compact-nav {
	padding-right: 0;
	padding-left: 20px;
}

.frm-nav-tabs li {
	display: inline-block;
	margin: 0;
}

.frm-nav-tabs a {
	color: var(--grey-700);
	padding: 10px 1px;
	margin: 0 9px;
	border-bottom: 2px solid transparent;
}

.frm_form_settings #frm_adv_info .frm-nav-tabs a {
	padding: 5px 1px;
	color: var(--grey-500);
}

.frm-nav-tabs.frm-compact-nav a {
	margin: 0 5px;
}

.frm-nav-tabs a {
	display: block;
	opacity: .9;
}

#frm_adv_info .frm-nav-tabs a {
	color: var(--grey-700);
}

.frm-nav-tabs a:hover,
.frm-nav-tabs .frm-tabs a {
	color: var(--primary-500) !important;
	border-color: var(--primary-500);
}

.frm_form_settings #frm_adv_info .frm-nav-tabs .frm-tabs a {
	font-weight: 500;
}

#frm-bulk-modal .howto,
#frm-bulk-modal h3 {
	font-size: var(--text-sm);
	font-weight: 400;
	margin: 5px 0 10px;
	color: var(--grey);
}

#frm-bulk-modal h3 {
	margin-left: 20px;
}

.frm-right-panel a.frm_add_logic_link,
.frm-right-panel h3 {
	color: var(--grey-700);
	font-size: var(--text-lg);
	font-weight: 400;
	border-top: 2px solid var(--sidebar-hover);
	margin: 0;
}

.frm-single-settings > h3:first-of-type {
	border-bottom: 2px solid var(--sidebar-hover);
	border-top: none;
	padding-top: 0 !important;
}

.frm-flex-justify,
.frm-right-panel .frm-single-settings h3 {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.frm-right-panel h3 i {
	color: var(--grey-700);
	float: right;
	width: 16px;
	cursor: pointer;
}

/* right sidebar */
#post-body-content + .frm-right-panel {
	flex: 0 0 var(--medium-sidebar);
	width: var(--medium-sidebar);
	min-width: var(--medium-sidebar);
	border-left: 1px solid var(--sidebar-hover);
}

.frm-new-entry #post-body-content + .frm-right-panel,
.frm-new-entry .frm-right-panel {
	background: none;
	border: none;
}

#post-body-content + .frm-right-panel h3 {
	padding: 20px 20px 0;
	font-size: 17px;
}

#post-body-content + .frm-right-panel .frm_with_icons:first-of-type h3 {
	border: none;
}

#frm-insert-fields h3 {
	color: var(--grey);
	font-size: 15px;
	font-weight: normal;
	border-top: none;
	border-bottom: 1px solid var(--sidebar-hover);
	margin: 0;
	padding: 10px 10px 10px 25px;
}

.frm_wrap #frm_adv_info ul.category-tabs {
	margin: 0;
	padding: 10px 0 9px;
	font-size: 15px;
	background: transparent;
}

.frm_wrap #frm_adv_info ul.category-tabs li {
	padding: 10px;
	background-color: transparent !important;
}

.frm_wrap #frm_adv_info ul.category-tabs li:first-child {
	border: none;
}

.frm_wrap #frm_adv_info .categorydiv div.tabs-panel {
	border: none;
	background: transparent;
}

.frm_wrap #frm-categorydiv {
	border-right: none;
}

#frm_adv_info #frm-conditionals {
	padding-top: var(--gap-sm);
}

#postbox-container-1 #taxonomy-linkcategory #frm-html-tags {
	display: none;
	max-height: none;
}

#postbox-container-1 .frm_field_list #frm-insert-fields .frmbutton.dropdown {
	position: relative;
}

/* Admin footer */
.frm-white-body #footer-upgrade {
	display: none;
}

.frm-admin-footer-links,
.frm-admin-footer-links-nav,
.frm-admin-footer-links-socials {
	display: flex;
	justify-content: center;
}
/* ... */

